[134414] Error when opening Execution Plan preference page

--- a/plugins/org.eclipse.datatools.sqltools.plan/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.plan/build.properties
@@ -5,10 +5,11 @@ bin.includes = META-INF/,\
                plugin.xml,\
                about.html,\
                schema/,\
-               icons/
+               icons/,\
+               plugin.properties
 
 src.dir =		src/
-plugin.version =	0.9.0.200603301
+plugin.version =	0.9.0.200604101
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
