Changed plugins build setup to support packaging as a single jar plugin

--- a/plugins/org.eclipse.datatools.connectivity.oda.consumer/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.consumer/build.properties
@@ -11,20 +11,18 @@
 #  
 #************************************************************************
 #
-plugin.jar.name = odaconsumer-helper.jar
-plugin.srczip.name = odaconsumersrc.zip
 package.odaconsumer.dir = ./org/eclipse/datatools/connectivity/oda/consumer/
-src.dir =            	 ./src/
-bin.dir =         		 ./bin/
+source.. = src/
+output.. = bin/
 jar.includes =           **/*.txt,\
                          **/*.xml,\
                          **/*.def,\
                          **/*.properties
 bin.includes = META-INF/,\
-               odaconsumer-helper.jar,\
                about.html,\
                plugin.xml,\
-               schema/driverBridge.exsd
+               .,\
+               schema/*.exsd
 javac.debug =            on
 javac.source =           1.4
 javac.target =           1.4
