--- a/plugins/org.eclipse.datatools.connectivity.oda.design/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design/build.properties
@@ -11,7 +11,7 @@
 #  
 #*************************************************************************
 #
-# $Id$
+# $Id: build.properties,v 1.6 2006/04/07 07:22:53 lchan Exp $
 #
 bin.includes = plugin.xml,\
                .,\
@@ -19,9 +19,7 @@ bin.includes = plugin.xml,\
                META-INF/,\
                plugin.properties
 package.odadesign.jar = ./org/eclipse/datatools/connectivity/oda/design/
-src.dir =            	 ./src/
 odadesign.src.dir =     ./src/org/eclipse/datatools/connectivity/oda/design/
-bin.dir =         		 ./bin/
 jar.includes =           **/*.txt,\
                          **/*.xml,\
                          **/*.def,\
