--- a/plugins/org.eclipse.datatools.connectivity.oda/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/build.properties
@@ -11,17 +11,13 @@
 #  
 #************************************************************************
 #
+source.. = src/
+output.. = bin/
 package.oda.jar =        ./org/eclipse/datatools/connectivity/oda/
-src.dir =            	 ./src/
 oda.src.dir =         	 ./src/org/eclipse/datatools/connectivity/oda/
-consumer.helper.path =   **/consumer/**
-test.src.dir =       	 ./test/
-bin.dir =         		 ./bin/
-jars.compile.order =     oda.jar
-jars.extra.classpath =   
 bin.includes = about.html,\
                plugin.xml,\
-               oda.jar,\
+               .,\
                schema/datasource.exsd,\
                META-INF/
 jar.includes =           **/*.txt,\
@@ -36,4 +32,3 @@ temp.dir =		         ./tempdir/
 plugin.destination =     ./
 javadoc.dir =            doc/api/
 download.dir =           ./download/
-custom = true
