--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/build.properties
@@ -1,28 +1,26 @@
-<!--
-/**
- *************************************************************************
- * Copyright (c) 2006 Actuate Corporation.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
- * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
- *
- * Contributors:
- *  Actuate Corporation - initial API and implementation
- *  
- *************************************************************************
- */
--->
-bin.includes = odadesignui.jar,\
-               plugin.xml,\
-               plugin*.properties,\
+#
+#*************************************************************************
+# Copyright (c) 2004, 2006 Actuate Corporation.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+#
+# Contributors:
+#  Actuate Corporation - initial API and implementation
+#  
+#*************************************************************************
+#
+source.. = src/
+output.. = bin/
+bin.includes = plugin.xml,\
+               .,\
                about.html,\
                schema/datasource.exsd,\
-               META-INF/
+               META-INF/,\
+               plugin.properties
 package.odadesignui.jar = ./org/eclipse/datatools/connectivity/oda/design/ui/
-src.dir =            	 ./src/
 odadesignui.src.dir =     ./src/org/eclipse/datatools/connectivity/oda/design/ui/
-bin.dir =         		 ./bin/
 jar.includes =           **/*.txt,\
                          **/*.xml,\
                          **/*.def,\
