--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
@@ -6,21 +6,21 @@ providerName = Eclipse.org
 _UI_MENU_SELECT_CONNECTION= Select &Connection
 
 # SQL Scrapbook
-SQLScrapbookAction.title_UI_       = Open SQL Scrapbook
+SQLScrapbookAction.title_UI_       = Open In SQL Editor
 
 ExceptionDialog.seeErrorLogMessage = See error log for more details.
 SQLScrapbookPlugin.internal_error  = Internal error
 
 # ------- NewSQLScrapbookFileWizardPage------- 
 NewWizardCategoryName=SQL Development
-NewSQLScrapbookPage.label=SQL Scrapbook Page
-NewSQLScrapbookPage.description=Create a SQL Scrapbook page
+NewSQLScrapbookPage.label=SQL File
+NewSQLScrapbookPage.description=Create a SQL File
 
-NewSQLScrapbookFileCreationWizard.title=New SQL Scrapbook Page
-NewSQLScrapbookFileWizardPage.title=Create SQL Scrapbook Page
+NewSQLScrapbookFileCreationWizard.title=New SQL File
+NewSQLScrapbookFileWizardPage.title=Create SQL File
 
 NewSQLScrapbookFileWizardPage.error.AlreadyExists=A file with the specified path already exists.
-NewSQLScrapbookFileWizardPage.open_error.message=Error occurred while opening SQL Scrapbook editor
+NewSQLScrapbookFileWizardPage.open_error.message=Error occurred while opening SQL file editor
 
-ScrapbookEditor.name=SQL Editor
+ScrapbookEditor.name=SQL File Editor
 
