--- a/plugins/org.eclipse.datatools.modelbase.derby/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.derby/build.properties
@@ -14,3 +14,10 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                plugin.properties
+               
+src.dir = src/
+plugin.version = 0.9.0.200604071
+javadoc.dir = doc/api/
+download.dir = ./download/
+javac.source = 1.4
+javac.target = 1.4
