--- a/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/src/org/eclipse/datatools/connectivity/internal/ui/resources.properties
@@ -67,7 +67,7 @@ NewConnectionProfileWizardPage.summary_cp_desc = Description
 NewConnectionProfileWizardPage.Button.AutoConnect = Auto-connect when the wizard is finished or when Enterprise Explorer opens.
 NewConnectionProfileWizardPage.Button.AutoConnect1 = Auto-connect when Enterprise Explorer opens.
 NewConnectionProfileWizardPage.summary_autoconnect = Auto connect
-ConnectionProfileDetailsPage.Button.TestConnection = Test Connection
+ConnectionProfileDetailsPage.Button.TestConnection = &Test Connection
 ConnectionProfileDetailsPage.AskConfirmation = Confirm Dialog
 ConnectionProfileDetailsPage.AskReconnect = This connection profile\'s connection information has been changed, do you want to reconnect the server?
 SummaryWizardPage.title = Summary
@@ -85,5 +85,5 @@ error.contentExtension =Error connecting to the "{0}" extension on profile "{1}"
 CPVersionPropertyPage.desc=Version information for {0}.\nThis information was obtained from the last connection attempt.  If the last attempt to connect was unsuccessful, no version information will be available.
 CPVersionPropertyPage.label.versionUnavailable=Version information is unavailable for this profile.
 CPVersionPropertyPage.label.techVersions=The following technologies are available on this server:
-ConnectionProfileSummaryPage.button.testConnection=Test Connection
+ConnectionProfileSummaryPage.button.testConnection=&Test Connection
 CommonLabelProviderBase.label.version=v.
