[BZ136477 & BZ128766] Moves the DSE into a Connectivity view category and fixes refresh issues in the DSE for categories, profiles, and objects beneath profiles when connected.

--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.xml
@@ -37,6 +37,7 @@
             </possibleChildren>
          </navigatorContent>
       </extension>
+      
       <extension
             point="org.eclipse.ui.navigator.viewer">
          <viewerContentBinding viewerId="org.eclipse.datatools.connectivity.DataSourceExplorerNavigator">
@@ -44,6 +45,25 @@
                <contentExtension pattern="org.eclipse.datatools.connectivity.db.sqlModelContent"/>
             </includes>
          </viewerContentBinding>
+         <viewerActionBinding viewerId="org.eclipse.datatools.connectivity.DataSourceExplorerNavigator">
+            <includes>
+               <actionExtension pattern="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.actions.popup.RefreshActionProvider"/>
+            </includes>
+         </viewerActionBinding>
       </extension>  
 
+   <extension
+         point="org.eclipse.ui.navigator.navigatorContent">
+      <actionProvider
+            class="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.actions.popup.RefreshActionProvider"
+            id="org.eclipse.datatools.connectivity.sqm.server.internal.ui.explorer.actions.popup.RefreshActionProvider"
+            overrides="org.eclipse.datatools.connectivity.ui.dse.actions.RefreshActionProvider">
+         <enablement>
+            <or>
+               <instanceof value="org.eclipse.datatools.connectivity.sqm.core.internal.ui.explorer.virtual.IVirtualNode"/>
+               <instanceof value="org.eclipse.datatools.modelbase.sql.schema.SQLObject"/>
+            </or>
+         </enablement>
+      </actionProvider>
+   </extension>
 </plugin>
