--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
@@ -30,3 +30,4 @@ DSE.ContentExtension.Decorator.Description = Decorate content extension node whe
 DSE.content = Data Source Explorer Extension
 
 category.name.dataTools = SQL Development
+category.name.connectivity = Connectivity
