--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/src/org/eclipse/datatools/connectivity/ui/dse/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/src/org/eclipse/datatools/connectivity/ui/dse/resources.properties
@@ -93,3 +93,5 @@ CPVersionPropertyPage.desc=Version information for {0}.\nThis information was ob
 CPVersionPropertyPage.label.versionUnavailable=Version information is unavailable for this profile.
 CPVersionPropertyPage.label.techVersions=The following technologies are available on this server:
 ConnectionProfileLabelProvider.label.versionIndicator=v.
+
+DSE.Refresh.label = Ref&resh
