[BZ138224] Fixes problem introduced into the DSE by a prior delivery.

--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.xml
@@ -308,6 +308,9 @@
             <insertionPoint
                   name="slot3"
                   separator="true"/>
+            <insertionPoint
+                  name="additions"
+                  separator="true"/>
          </popupMenu>
       </viewer>
       <viewerContentBinding viewerId="org.eclipse.datatools.connectivity.DataSourceExplorerNavigator">
