[BZ125962] Start of the fixes to make connectivity work in a headless environment.

--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
@@ -34,3 +34,7 @@ duplicate.profile.name = Copy of {0}({1})
 DriverConnectionBase.error.unknown=Connection failed with unspecified error.
 DriverConnectionBase.error.driverDefinitionNotSpecified=Driver definition not specified.
 DriverConnectionBase.error.driverDefinitionNotFound=Driver definition could not be found.
+error.loadprofilesxml = Error loading connection profile data.
+error.saveprofilesxml = Error saving connection profile data.
+error.loaddriversxml = Error loading driver instance data.
+error.savedriversxml = Error saving driver instance data.
