[114415] add ability to prevent certain profile properties from being persisted within the workspace.  updated generic db profile to give the user the option of persisting the password property.  modified connect action to prompt for connection details when password is not supplied.  updated oda IConnectionProfile implementation to implement new methods through its delegate profile instance.

--- a/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.xml
@@ -10,9 +10,10 @@
       <connectionProfile
             category="org.eclipse.datatools.connectivity.db.category"
             icon="icons/jdbc_16.gif"
-            pingFactory="org.eclipse.datatools.connectivity.db.generic.JDBCConnectionFactory"
             id="org.eclipse.datatools.connectivity.db.generic.connectionProfile"
-            name="SQL Model-JDBC Connection"/>
+            name="SQL Model-JDBC Connection"
+            pingFactory="org.eclipse.datatools.connectivity.db.generic.JDBCConnectionFactory"
+            propertiesPersistenceHook="org.eclipse.datatools.connectivity.db.generic.GenericDBPropertiesPersistenceHook"/>
       <connectionFactory
             class="org.eclipse.datatools.connectivity.db.generic.JDBCConnectionFactory"
             id="java.sql.Connection"
