--- a/plugins/org.eclipse.datatools.connectivity.db.generic/src/org/eclipse/datatools/connectivity/db/generic/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/src/org/eclipse/datatools/connectivity/db/generic/resources.properties
@@ -11,6 +11,7 @@ GenericDBProfileDetailsWizardPage.url.label = URL:
 GenericDBProfileDetailsWizardPage.PingButton=Test connection
 GenericDBProfileDetailsWizardPage.userName.label = User name:
 GenericDBProfileDetailsWizardPage.password.label = Password:
+GenericDBProfileDetailsWizardPage.persistpassword.label = Save Password
 GenericDBProfileDetailsWizardPage.optionalProps.label = Optional properties:
 GenericDBProfileDetailsWizardPage.summary.driverName.label = Driver name
 GenericDBProfileDetailsWizardPage.summary.connProps.label = Connection properties
